Fix layout issues

--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -149,6 +149,10 @@ body {
   word-wrap: break-word;
 }
 
+.art-bg {
+  background-color: #9fb2ac;
+}
+
 .cm-bg {
   background-color: #ffb581;
 }
